--- a/frontend/src/app/ipl/components/teamcreate/teamcreate.component.html
+++ b/frontend/src/app/ipl/components/teamcreate/teamcreate.component.html
@@ -1,9 +1,8 @@
+
+
 <div class="team-form-container">
   <form [formGroup]="teamForm" (ngSubmit)="onSubmit()">
-
     <!-- <div>
-    <div>
-
       <label for="teamId">Team ID:</label>
       <input id="teamId" formControlName="teamId" type="number" placeholder="Enter Team ID">
       <div *ngIf="teamForm.get('teamId')?.invalid && teamForm.get('teamId')?.touched">
@@ -11,14 +10,10 @@
       </div>
     </div> -->
 
-    </div>
-
     <div>
       <label for="teamName">Team Name:</label>
       <input id="teamName" formControlName="teamName" placeholder="Enter Team name" type="text">
       <div *ngIf="teamForm.get('teamName')?.invalid && teamForm.get('teamName')?.touched">
-        <small class="class-error" *ngIf="teamForm.get('teamName')?.hasError('required')">Team Name is required.</small>
-        <small class="class-error" *ngIf="teamForm.get('teamName')?.hasError('pattern')">Team Name must not contain special characters.</small>
         <small class="class-error">Team Name is required and must be at least 2 characters.</small>
       </div>
     </div>
@@ -27,10 +22,7 @@
       <label for="location">Team Location:</label>
       <input id="location" formControlName="location" placeholder="Enter team location" type="text">
       <div *ngIf="teamForm.get('location')?.invalid && teamForm.get('location')?.touched">
-        <small class="class-error">Location is required.</small>
-
         <small class="class-error">Enter a valid location</small>
-
       </div>
     </div>
 
@@ -50,11 +42,8 @@
       </div>
     </div>
     <button type="submit" [disabled]="teamForm.invalid">Create Team</button>
-
-    <a routerLink="/ipl">Dashboard</a>
-
-    <button type="button" (click)="resetForm()">Reset Form</button>
-
+    <!-- <button type="button" (click)="resetForm()">Reset Form</button> -->
+     <a routerLink="/ipl" class="task-list">Dashboard</a>
   </form>
 
   <div *ngIf="successMessage" class="success">
